--- a/css/screen.css
+++ b/css/screen.css
@@ -103,10 +103,10 @@ h1 {
     border-radius: 5px;
 }
 
-.message-container {
-    padding: 0 17px 10px 17px;
+.chat-message-container {
+
     overflow: scroll;
-    height: 424px;
+    height: 81.5%;
 }
 .chat-input-container {
     position: absolute;
@@ -275,23 +275,23 @@ h1 {
     animation-delay: 0.4s;
 }
 
-.vanilla-chatbot-kit-error {
+.chat-bot-kit-error {
     background-color: #fff;
     border-radius: 3px;
     padding: 15px;
 }
 
-.vanilla-chatbot-kit-error-container {
+.chat-bot-kit-error-container {
     width: 260px;
 }
 
-.vanilla-chatbot-kit-error-header {
+.chat-bot-kit-error-header {
     font-size: 1.3rem;
     color: #1d1d1d;
     margin-bottom: 30px;
 }
 
-.vanilla-chatbot-kit-error-docs {
+.chat-bot-kit-error-docs {
     display: block;
     margin: 25px auto;
     color: #5F1A26;
